Fixed spacing in css-canvas-medical challenge

--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -18,7 +18,7 @@
 }
 
 .col-one-third {
-  flex-basis: 360px;
+  flex-basis: calc(100% / 3);
 }
 
 .col-two-third {
@@ -79,8 +79,8 @@
 }
 
 .ready-margin {
-  margin-right: 137px;
-  margin-left: 137px;
+  margin-right: 68px;
+  margin-left: 68px;
   margin-bottom: 30px;
 }
 
@@ -212,7 +212,7 @@
 }
 
 .info-padding-left-column {
-  padding-left: 125px;
+  padding-left: 55px;
   padding-top: 19px;
 }
 
@@ -233,8 +233,8 @@
 }
 
 .img-canvas {
-  width: 81%;
-  padding-right: 74px;
+  width: 61%;
+  padding-right: 49px;
 }
 
 .a-info {
@@ -242,11 +242,11 @@
 }
 
 .margin-left-privacy {
-  margin-left: 12%;
+  margin-left: 5%;
 }
 
 .margin-left-contact {
-  margin-left: 4%;
+  margin-left: 5%;
 }
 
 img {
